--- a/home.html
+++ b/home.html
@@ -19,8 +19,11 @@
             <img src="images/pizza1.png" alt="pizza image" id="img1">
             <img src="images/pizza2.png" alt="pizza image" id="img2">
         </div>
-        
     </header>
+
+    <div class="container">
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/all.js"></script>
