a h2 heading of about us and three more paragraphs was added.

--- a/home.html
+++ b/home.html
@@ -22,7 +22,13 @@
     </header>
 
     <div class="container">
-        
+        <div class="text-center">
+            <h2>About us</h2>
+            <p><i>L'ora della Pizza is an italian name which means it's time to Pizza.</i></p>
+            <p class="lead">We are L'ora della Pizza, and our mission is to make cool pizza which feeds all your senses.</p>
+            <p>We prefer to rely on instinct and feel, measuring by hand, not by the gram. This is the authentic way to make pizza. Sure it’s a little unrefined, but we’re proud.</p>
+            <p>It’s pizza like this which feeds your sense of sharing, adding flavour to those occasions when you get together with friends and family. And really, isn’t that what it’s all about? Because when pizza feeds all your senses, it’s not just great, it’s sensational.</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.js"></script>
