--- a/home.html
+++ b/home.html
@@ -30,6 +30,23 @@
             <p>It’s pizza like this which feeds your sense of sharing, adding flavour to those occasions when you get together with friends and family. And really, isn’t that what it’s all about? Because when pizza feeds all your senses, it’s not just great, it’s sensational.</p>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row justify-content-left">
+            <div class="col-md-4 box">
+                <h3>We’re Careful</h3>
+                <p>The crust is stored in a separate container, on a separate shelf in our fridge. The cheese, marinara sauce and pepperoni are stored in a designated kit, and every pizza is freshly baked on designated parchment paper in our ovens.</p>
+            </div>
+            <div class="col-md-4 box">
+                <h3>We’re Certified</h3>
+                <p>Our cheese-only and cheese-and-pepperoni gluten-free pizzas are prepared using the procedures certified by the law, and we take specific caution when making these pizzas.</p>
+            </div>
+            <div class="col-md-4 box">
+                <h3>You’re Creative</h3>
+                <p>For those simply looking to reduce gluten in their diets, we offer a Create Your Own pizza option. The cheese, pepperoni and marinara come from our gluten-free kit, but all additional toppings are stored at our standard make table.</p>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/all.js"></script>
