--- a/home.html
+++ b/home.html
@@ -51,6 +51,10 @@
     <div class="container">
         <a href="order.html" class="button">Click here to order</a>
     </div>
+
+    <footer>
+        Copyright &copy;2021 | L'ora della Pizza
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/all.js"></script>
