a second grid section was added.

--- a/order.html
+++ b/order.html
@@ -58,6 +58,31 @@
                   <button type="submit" class="btn btn-outline-success button2">Add to Cart  <i class="fas fa-shopping-cart"></i></button>
                 </form>
               </div>
+
+              <div class="col-md-6">
+                <div class="cartWell">
+                    <div id="show-cart">
+                      <h2>Cart Checkout</h2>
+                      <h4>Total: Ksh.<span class="total-cart"></span></h4>
+                    </div>
+                    <div>
+                        <ol id="cart">
+        
+                        </ol>
+                    </div>
+                    <div id="show-pizza">
+                        <p id="pizzaName">
+                            <ul>
+                                <li>Size: <span class="size"></span></li>
+                                <li>Crust: <span class="crust"></span></li>
+                                <li>Toppings: <span class="toppings"></span></li>
+                                <li>Cost: Ksh.<span class="cost"></span></li>
+                            </ul>
+                        </p>
+                    </div>
+                    <button class="btn btn-outline-danger button2" id="checkout" >Checkout</button>
+                    </div>
+              </div>
         </div>
     </div>
     
