--- a/order.html
+++ b/order.html
@@ -82,6 +82,14 @@
                     </div>
                     <button class="btn btn-outline-danger button2" id="checkout" >Checkout</button>
                     </div>
+
+                    <div class="pickup-delivery">
+                        <h4>Select a delivery Method</h4>
+                        <p><strong>Pickup Station </strong>Ready for pickup immediately after placing an order</p>
+                        <button type="button" class="btn btn-outline-primary button2" id="pickup">Pickup Station</button>
+                        <p><strong>Express Delivery </strong> We offer express delivery within Nairobi at a cost of ksh.300</p>
+                        <button type="button" class="btn btn-outline-primary button2" id="delivery">Delivery to your home or office  <i class="fas fa-truck"></i></button>
+                    </div>
               </div>
         </div>
     </div>
