a new form for pickup was added.

--- a/order.html
+++ b/order.html
@@ -90,6 +90,17 @@
                         <p><strong>Express Delivery </strong> We offer express delivery within Nairobi at a cost of ksh.300</p>
                         <button type="button" class="btn btn-outline-primary button2" id="delivery">Delivery to your home or office  <i class="fas fa-truck"></i></button>
                     </div>
+
+                    <div class="pickupNow">
+                        <form id="pickupForm">
+                            <div class="form-group">
+                                <label for="name">Enter the full name of the person picking up the order</label>
+                                <input type="text" placeholder="Name" class="form-control text-input" id="pickupName">
+                            </div>
+                            <button type="submit" class="btn btn-outline-success button2" id="button-pickup">Submit</button>
+                        </form>
+                        <a href="home.html" class="button">Home <i class="fas fa-home"></i></a>
+                    </div>
               </div>
         </div>
     </div>
