--- a/order.html
+++ b/order.html
@@ -101,6 +101,22 @@
                         </form>
                         <a href="home.html" class="button">Home <i class="fas fa-home"></i></a>
                     </div>
+
+                    <div class="deliveryNow">
+                        <form id="deliveryForm">
+                            <div class="form-group">
+                                <label for="name">Enter Your Full Name</label>
+                                <input type="text" placeholder="Name" id="deliveryName" class="form-control text-input" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="name">Enter Your Home or Office Address</label>
+                                <input type="text" placeholder="Address" id="address" class="form-control text-input" required>
+                            </div>
+                            <button type="submit" class="btn btn-outline-success button2" id="submitDeliveryForm">Submit</button>
+                        </form>
+                       
+                        <a href="home.html" class="button">Home <i class="fas fa-home"></i></a>
+                    </div>
               </div>
         </div>
     </div>
