--- a/order.html
+++ b/order.html
@@ -99,7 +99,7 @@
                             </div>
                             <button type="submit" class="btn btn-outline-success button2" id="button-pickup">Submit</button>
                         </form>
-                        <a href="home.html" class="button">Home <i class="fas fa-home"></i></a>
+                        <a href="index.html" class="button">Home <i class="fas fa-home"></i></a>
                     </div>
 
                     <div class="deliveryNow">
@@ -114,7 +114,7 @@
                             </div>
                             <button type="submit" class="btn btn-outline-success button2" id="submitDeliveryForm">Submit</button>
                         </form>
-                        <a href="home.html" class="button">Home <i class="fas fa-home"></i></a>
+                        <a href="index.html" class="button">Home <i class="fas fa-home"></i></a>
                     </div>
               </div>
         </div>
